fix screenshot and remove enter on the flicker text

--- a/public/demos/flickering/flickering.css
+++ b/public/demos/flickering/flickering.css
@@ -24,6 +24,7 @@ h1 {
 	font-size: 14vw;
 	line-height: 1;
 	margin: 0;
+	text-wrap: nowrap;
 }
 
 span {
